Tweaks to HTML version of ToS / Privacy

--- a/sites/stamped.com/bin/www/templates/privacy-mobile.html
+++ b/sites/stamped.com/bin/www/templates/privacy-mobile.html
@@ -2,21 +2,20 @@
 <head>
 <meta name="viewport" content="width=480">
 <style type="text/css">
-body, html{width:100%;}
+body, html{width:100%;background-color:transparent;}
 body{
 -webkit-text-size-adjust:auto;
 font-family:Helvetica, Arial, Verdana, sans-serif;
 padding:10px;
-font-size:16pt;
+font-size:.75em;
+color:#595959;
 }
 a, a:visited{
-color:#3366cc;
+color:#377ad9;
 text-decoration: none;
+font-weight:bold;
 }
-p{line-height:1.3em;}
-h2{font-size:1.2em;}
 h3{
-font-size:1em;
 font-style:italic;
 font-weight: normal;
 }
