--- a/sites/stamped.com/bin/www/templates/privacy-mobile.html
+++ b/sites/stamped.com/bin/www/templates/privacy-mobile.html
@@ -9,6 +9,7 @@ font-family:Helvetica, Arial, Verdana, sans-serif;
 padding:10px;
 font-size:.75em;
 color:#595959;
+line-height:1.5em;
 }
 a, a:visited{
 color:#377ad9;
