--- a/sites/stamped.com/bin/www/templates/terms-mobile.html
+++ b/sites/stamped.com/bin/www/templates/terms-mobile.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
 <style type="text/css">
-body, html{width:100%;background-color:transparent;}
+body, html{background-color:transparent;}
 body{
 -webkit-text-size-adjust:auto;
 font-family:Helvetica, Arial, Verdana, sans-serif;
