--- a/internal/projects/bulleit/Interfaces/FirstRunViewController.xib
+++ b/internal/projects/bulleit/Interfaces/FirstRunViewController.xib
@@ -407,7 +407,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{125, 59}, {175, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="294653326"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -438,7 +437,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 154}, {266, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="17759907"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -469,7 +467,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{125, 105}, {175, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="972441663"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -501,7 +498,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 249}, {266, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="637011777"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -533,7 +529,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 201}, {266, 31}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="57952549"/>
 						<string key="NSReuseIdentifierKey">_NS:294</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -565,7 +560,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{35, 20}, {251, 19}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="546230272"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -581,7 +575,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{24, 58}, {78, 78}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="525932296"/>
 						<string key="NSReuseIdentifierKey">_NS:180</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -596,7 +589,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{79, 116}, {29, 29}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="918615380"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -619,10 +611,9 @@
 					<object class="IBUIImageView" id="637011777">
 						<reference key="NSNextResponder" ref="1056128844"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{80, 325}, {220, 43}}</string>
+						<string key="NSFrame">{{80, 342}, {220, 27}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="141276877"/>
+						<reference key="NSNextKeyView" ref="700790359"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<int key="IBUIContentMode">8</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -635,9 +626,8 @@
 					<object class="IBUIButton" id="141276877">
 						<reference key="NSNextResponder" ref="1056128844"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{226, 338}, {75, 14}}</string>
+						<string key="NSFrame">{{225, 356}, {75, 14}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<reference key="IBUIBackgroundColor" ref="407695596"/>
@@ -651,22 +641,22 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="461933440"/>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="723956113">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1023383288">
 							<int key="type">2</int>
 							<int key="size">2</int>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="387807984">
+						<object class="NSFont" key="IBUIFont" id="1006419637">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">18</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="146568610">
+					<object class="IBUIButton" id="700790359">
 						<reference key="NSNextResponder" ref="1056128844"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{135, 338}, {70, 14}}</string>
+						<string key="NSFrame">{{134, 356}, {70, 14}}</string>
 						<reference key="NSSuperview" ref="1056128844"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="141276877"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<reference key="IBUIBackgroundColor" ref="407695596"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -679,13 +669,12 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="461933440"/>
-						<reference key="IBUIFontDescription" ref="723956113"/>
-						<reference key="IBUIFont" ref="387807984"/>
+						<reference key="IBUIFontDescription" ref="1023383288"/>
+						<reference key="IBUIFont" ref="1006419637"/>
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 388}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="406634172"/>
 				<string key="NSReuseIdentifierKey">_NS:174</string>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -994,7 +983,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">termsButtonPressed:</string>
-						<reference key="source" ref="146568610"/>
+						<reference key="source" ref="700790359"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -1147,8 +1136,8 @@
 							<reference ref="918615380"/>
 							<reference ref="972441663"/>
 							<reference ref="637011777"/>
+							<reference ref="700790359"/>
 							<reference ref="141276877"/>
-							<reference ref="146568610"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Sign Up Scroll View</string>
@@ -1217,7 +1206,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">86</int>
-						<reference key="object" ref="146568610"/>
+						<reference key="object" ref="700790359"/>
 						<reference key="parent" ref="1056128844"/>
 					</object>
 				</object>
@@ -1329,7 +1318,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">89</int>
+			<int key="maxID">97</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1414,6 +1403,8 @@
 							<string>cancelButton</string>
 							<string>confirmButton</string>
 							<string>createAccountButton</string>
+							<string>legalNavigationController</string>
+							<string>legalWebViewController</string>
 							<string>passwordTextField</string>
 							<string>scrollView</string>
 							<string>signInButton</string>
@@ -1436,6 +1427,8 @@
 							<string>UIButton</string>
 							<string>UIButton</string>
 							<string>UIButton</string>
+							<string>UINavigationController</string>
+							<string>WebViewController</string>
 							<string>UITextField</string>
 							<string>UIScrollView</string>
 							<string>UIButton</string>
@@ -1461,6 +1454,8 @@
 							<string>cancelButton</string>
 							<string>confirmButton</string>
 							<string>createAccountButton</string>
+							<string>legalNavigationController</string>
+							<string>legalWebViewController</string>
 							<string>passwordTextField</string>
 							<string>scrollView</string>
 							<string>signInButton</string>
@@ -1500,6 +1495,14 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">createAccountButton</string>
 								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">legalNavigationController</string>
+								<string key="candidateClassName">UINavigationController</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">legalWebViewController</string>
+								<string key="candidateClassName">WebViewController</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">passwordTextField</string>
@@ -1595,6 +1598,85 @@
 						<string key="minorKey">./Classes/UserImageView.h</string>
 					</object>
 				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">WebViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">shareButtonPressed:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">shareButtonPressed:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">shareButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>backButton</string>
+							<string>forwardButton</string>
+							<string>loadingIndicator</string>
+							<string>reloadButton</string>
+							<string>shareButton</string>
+							<string>webView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIButton</string>
+							<string>UIButton</string>
+							<string>UIActivityIndicatorView</string>
+							<string>UIButton</string>
+							<string>UIButton</string>
+							<string>UIWebView</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>backButton</string>
+							<string>forwardButton</string>
+							<string>loadingIndicator</string>
+							<string>reloadButton</string>
+							<string>shareButton</string>
+							<string>webView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">backButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">forwardButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">loadingIndicator</string>
+								<string key="candidateClassName">UIActivityIndicatorView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">reloadButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">shareButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">webView</string>
+								<string key="candidateClassName">UIWebView</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/WebViewController.h</string>
+					</object>
+				</object>
 			</object>
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
@@ -1635,7 +1717,7 @@
 				<string>{620, 7}</string>
 				<string>{372, 372}</string>
 				<string>{640, 4}</string>
-				<string>{220, 43}</string>
+				<string>{220, 27}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
